# project_stats

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml
docker/postgres/: create_database.sql
envs/: development.env  testing.env
migrations/: env.py
migrations/versions/: 8fc6ba75cb4a_initial_migration.py
project_stats/: __init__.py
scraper/: __init__.py  __main__.py  args.py
scraper/tests/: test_args.py  test_parser.py
src/: __init__.py  config.py  siteconfig.py
src/api/: __init__.py  occurances.py
src/database/: models.py
tests/: conftest.py  test_application.py  test_config.py  test_occurances.py
