[tool.poetry]
name = "project-stats"
version = "0.1.0"
description = "Get the stats on a project and display them in a graph"
authors = ["Austin FLORES"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
