[tool.poetry]
name = "project-stats"
version = "0.1.0"
description = "Get the stats on a project and display them in a graph"
authors = ["Austin FLORES"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"

[tool.poetry.group.development.dependencies]
ruff = "^0.1.9"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.format]
quote-style = "single"
